<resources>
  <string name="action_settings">Settings</string>
  <string name="action_imageFromFile">Load From File</string>
  <string name="action_imageFromCamera">Load From Camera</string>
  <string name="app_name">NowLayout</string>
  <string name="hello_world">Hello World!</string>
  <string name="title_activity_main">Old Newspaper App</string>
  <string name="card_body_default">This is the default body text,
  you should never see this.</string>
  <string name="share">Share</string>
  <string name="save">Save</string>
  <string name="caption">Caption</string>
  <string name="caption_hint">Write caption here</string>
  <string name="gridsize">Halftone Grid Size</string>
  <string name="apply">Apply</string>
  <string name="image_header">Image</string>
  <string name="angle">Halftone Grid Angle</string>
  <string name="halftone_shape">Halftone Shape</string>
  <string name="negative">Negative (no options)</string>
  <string-array name="halftone_types_array">
        <item>Circles</item>
	<item>Rectangles</item>
	<item>Diamonds</item>
  </string-array>
  <string name="radius">Radius</string>
  <string name="ratio">Grid Ratio</string>
</resources>
