<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@drawable/bg_card">

    <TextView
        android:paddingLeft="4dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/hello_world"
        android:textColor="@color/cardTextMed"
        android:textSize="28dp"
        android:textStyle="italic"
        android:id="@+id/card_heading"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/cardTextLight"
        />
    <ImageView
        android:id="@+id/card_image"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:adjustViewBounds="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/card_action"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
	android:gravity="right|center_vertical"
        android:layout_height="wrap_content">
      <Button
          android:id="@+id/shareButton"
          style="@style/CardActionButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
	  android:gravity="left|center_vertical"
	  android:drawableLeft="@drawable/ic_action_search"
	  android:layout_alignParentRight="true"
	  android:onClick="onClickShare"
          android:text="@string/share" />
      <Button
          android:id="@+id/saveButton"
          style="@style/CardActionButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
	  android:gravity="left|center_vertical"
	  android:drawableLeft="@drawable/ic_action_search"
	  android:layout_toRightOf="@id/shareButton"
	  android:layout_alignParentLeft="true"
	  android:onClick="onClickSave"
          android:text="@string/save" />
      </LinearLayout>
  </LinearLayout>
</LinearLayout>
