<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/oriLayout"
    android:background="#ddd"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
      android:id="@+id/imageLayout"
      android:layout_weight="2"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="0dp">
    <ScrollView
	android:id="@+id/outputScroller"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="0dp"
	android:layout_weight="1">
      <LinearLayout
    	  android:id="@+id/outputArea"
     	  android:orientation="horizontal"
      	  android:layout_width="match_parent"
      	  android:layout_height="wrap_content"/>
    </ScrollView>
    <LinearLayout
	android:orientation="horizontal"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
      <Button
          android:id="@+id/shareButton"
          style="@style/CardActionButton"
	  android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
	  android:gravity="left|center_vertical"
	  android:drawableLeft="@drawable/ic_action_share"
	  android:onClick="onClickShare"
          android:text="@string/share" />
      <Button
          android:id="@+id/saveButton"
          style="@style/CardActionButton"
	  android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
	  android:gravity="left|center_vertical"
	  android:drawableLeft="@drawable/ic_action_save"
	  android:onClick="onClickSave"
          android:text="@string/save" />
    </LinearLayout>
  </LinearLayout>
  <LinearLayout
      android:id="@+id/filterLayout"
      android:layout_weight="1"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="0dp">
    <android.support.v4.view.ViewPager
	android:id="@+id/filterPager"
	android:layout_weight="1"
	android:layout_width="match_parent"
	android:layout_height="0dp">
      <android.support.v4.view.PagerTitleStrip
	  android:id="@+id/pager_title_strip"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:layout_gravity="top"
	  android:background="#ccc"
	  android:textColor="#000"
	  android:paddingTop="4dp"
	  android:paddingBottom="4dp" />
    </android.support.v4.view.ViewPager>
    <Button
	android:id="@+id/apply_filter"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:text="@string/apply"
	android:onClick="onClickApply"/>
  </LinearLayout>
</LinearLayout>
